syntax = "proto3";
package calculator;
option go_package="server/calculatorpb;pb";

message AddRequest {
  int32 num1 = 1;
  int32 num2 =2 ;

}
//
message AddResponse {
  int32 result = 1;
}


message FibonacciRequest {
  int32 count = 1;
}

message FibonacciResponse {
  int32 number = 1;
}

service Calculator {
  rpc Add(AddRequest) returns (AddResponse) {};
  rpc Fibonacci(FibonacciRequest) returns (stream FibonacciResponse) {};
}